# risu-insights

./: .gitignore  QUICKSTART.md  README.md  __init__.py  ansible.cfg  cli.py  config.py  config.yml  deploy-ollama-mcphost.yml  deploy-qwen.yml  fix_venv.sh  http_app.py  inventory.py  mcp_app.py  pyproject.toml  requirements.txt  run-server.sh  run.sh  runner.py  server.py  summary.py  test_server.py
inventory/: hosts  hosts.example  hosts.ini
remediation_playbooks/: example-verbose.yml  log-cleanup.yml
risu_insights/: __init__.py  config.py  diagnostics.py  formatters.py  inventory.py  playbooks.py
worker_playbooks/: install-risu-package.yml  run-diagnostics.yml
