[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "risu-insights"
version = "0.1.0"
description = "MCP server exposing RISU diagnostics via streamable HTTP, SSE, and STDIO transports"
authors = [{name = "Spectro"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anyio>=4.4",
    "ansible>=2.9",
    "ansible-runner>=2.0",
    "fastapi>=0.110",
    "mcp>=0.1.0",
    "pydantic>=2.0",
    "typer>=0.12",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[project.scripts]
risu-insights-http = "cli:http_main"
risu-insights-stdio = "cli:stdio_main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
include = ["*.py", "README.md", "pyproject.toml", "inventory"]
exclude = ["__pycache__", "*.pyc", ".venv"]
